--- a/src/test/resources/configuration.properties
+++ b/src/test/resources/configuration.properties
@@ -1,3 +1,16 @@
 browser=chrome
-url=https://claruswaysda.github.io/addRecordWebTable.html
-timeout=10
+cl_url=https://thinking-tester-contact-list.herokuapp.com
+cl_email=johndoeSOA@yahoo.com
+cl_password=John_123
+
+sd_url=https://www.saucedemo.com
+sd_username=standard_user
+sd_password=secret_sauce
+
+ohrm_url=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
+ohrm_username=Admin
+ohrm_password=admin123
+user.email=newemail@gmail.com
+user.password=newpassword123
+contact.firstname=Fatima
+contact.lastname=Alsh
